# mcp-code-search

./: .gitignore  LICENSE  README.md  pyproject.toml
src/mcp_code_search/: __init__.py  __main__.py  chunker.py  config.py  embedder.py  indexer.py  languages.py  models.py  server.py  store.py  watcher.py
tests/: test_chunker.py  test_config.py  test_embedder.py  test_indexer.py  test_store.py  test_watcher.py
