[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-code-search"
version = "0.1.0"
description = "Local semantic code search MCP server"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.13.0",
    "lancedb>=0.17.0",
    "sentence-transformers>=3.0.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-language-pack>=0.7.0",
    "pathspec>=0.12.0",
]

[project.optional-dependencies]
ollama = ["ollama>=0.4.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[project.scripts]
mcp-code-search = "mcp_code_search.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_code_search"]
